compiler-plugin/testData/diagnostics/simpleMutableTest.kt
// RUN_PIPELINE_TILL: BACKEND

fun simpleTest() {
    <!MUTABLE_VAR_IN_FUNCTION!>var x = 1<!>
}